# live555-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchLive555.cmake  FindDependencies.cmake  Live555Helpers.cmake  Options.cmake
patches/: 01-fix-int-to-pointer-casts.patch  02-fix-array-bounds.patch  03-fix-array-compare.patch  04-fix-sprintf-deprecation.patch
